[package]
name = "dungeoncrawl"
version = "0.1.0"
edition = "2021"
authors = ["Tomas Dambrauskas <tomas.sql@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "~0.8.1"
# TODO: upgrade
legion = "=0.3.1"
serde = { version = "1.0.115" }
ron = "=0.6.1"
